--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "essentia.js": "^0.1.3",
     "firebase": "^12.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
