--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "essentia.js": "^0.1.3",
     "firebase": "^12.7.0",
+    "html2pdf.js": "^0.14.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
