--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "essentia.js": "^0.1.3",
     "firebase": "^12.7.0",
     "html2pdf.js": "^0.14.0",
