--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "date-fns": "^4.1.0",
     "essentia.js": "^0.1.3",
     "firebase": "^12.7.0",
     "html2pdf.js": "^0.14.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-big-calendar": "^1.19.4",
+    "react-dom": "^19.2.0",
+    "react-schedule-selector": "^2.0.0",
+    "styled-components": "^6.3.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
